# mockish

./: .bumpversion.cfg  .copier-answers.yml  .drone.yml  .env  CHANGELOG.md  Dockerfile-docs  Mykefile  README.md  pyproject.toml  setup.cfg
config/: mkdocs.yml
docs/reference/: 01.md  02.md  03.md
src/mockish/: __init__.py  constants.py  mockish.py  models.py
src/mockish/httpx/: response.py
src/mockish/requests/: response.py
tests/: conftest.py  test_httpx.py  test_response.py
