[metadata]
name = mockish
version = file: VERSION
description = A thin layer of sugar atop Python's mock.
long_description = file: README.md
long_description_content_type = text/markdown
author = Donald Mellenbruch
author_email = hello@Fresh2.dev
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
url = https://github.com/fresh2dev/mockish
project_urls =
    Repository = https://github.com/fresh2dev/mockish
    Documentation = https://www.Fresh2.dev/code/r/mockish/i
    License = https://www.Fresh2.dev/code/r/mockish/i/license
    Issues = https://github.com/fresh2dev/mockish/issues
    Funding = https://www.Fresh2.dev/funding
[options]
package_dir =
    =src
packages = find:
python_requires = >=3.7
install_requires =
    typing-extensions; python_version<'3.10'
    requests==2.*
    httpx==0.*
    pydantic>=1.10.3,<2

[options.package_data]
* = **

[options.extras_require]
build =
    setuptools>=62.3.0
    build==0.*
    wheel==0.*
    twine==4.*
docs =
    mkdocs==1.*
    mkdocs-material==9.*
    mkdocstrings[python]==0.20.*
    mkdocs-autorefs==0.*
    mkdocs-include-dir-to-nav==1.*
dev =
    python-lsp-server[rope]==1.*
    pylint==2.*
    pylint-pytest==1.*
    mypy[reports]==0.*
    ruff==0.*
    black==23.*
    isort==5.*
    ipython
tests =
    pytest==7.*
    pytest-cov==4.*
    pytest-html==3.*
    pytest-sugar==0.*
    pytest-custom-exit-code==0.3.*
    pylint==2.*
    pylint-pytest==1.*
    packaging==23.*

[options.packages.find]
where = src
exclude =
    tests

[tool:pytest]
minversion = 7.0
testpaths =
    src
    tests

[mypy]
namespace_packages = True
explicit_package_bases = True
strict = True
plugins = pydantic.mypy
files = src/**/*.py
exclude = tests
[mypy-tests.*]
ignore_errors = True

[pydantic-mypy]
init_forbid_extra = True
init_typed = True
warn_required_dynamic_aliases = True
warn_untyped_fields = True

[isort]
profile = black
line_length = 88
src_paths = src,tests
float_to_top = true
include_trailing_comma = true
honor_noqa = true

[pylint.MASTER]
load-plugins = pylint_pytest
ignore-paths = ^\.git$,
               ^\.venv$,
               ^__pycache__$
[pylint.FORMAT]
max-line-length = 88
[pylint]
disable =
    fixme,
    invalid-name,
    unnecessary-pass,
    unnecessary-ellipsis,
    too-few-public-methods,
    import-outside-toplevel

# [flake8]
# max-line-length = 88
# ignore = PT004, W503, F401
# extend-ignore = E203, E501
# extend-immutable-calls = yapx.arg, myke.arg
# exclude = .git,.venv,__pycache__
# require-plugins =
#     flake8-bugbear
#     flake8-comprehensions
#     flake8-pytest-style
#     flake8-simplify

# [autoflake]
# in-place = true
# remove-all-unused-imports = true
# recursive = true
# ignore-init-module-imports = true
# remove-duplicated-keys = true
# removed-unused-variables = true
# jobs = 1

[tox:tox]
envlist = py3{7,8,9,10,11}
skip_missing_interpreters = false
toxworkdir = /tmp/.tox
minversion = 4.0
requires =
    setuptools>=62.3.0
[testenv]
recreate = true
extras = tests
commands =
    python -m pytest {posargs}
    python -m pylint --disable=C,R ./src ./tests
